fixed generated decision tree and naive bayes code

--- a/src/app/JTableTut.form
+++ b/src/app/JTableTut.form
@@ -466,39 +466,43 @@
                                   <Group type="102" alignment="0" attributes="0">
                                       <EmptySpace min="-2" pref="75" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Group type="103" groupAlignment="1" attributes="0">
-                                              <Component id="generateDecisionTreeButton" min="-2" max="-2" attributes="0"/>
-                                              <Group type="102" attributes="0">
-                                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                                      <Component id="classesLabel" alignment="0" max="32767" attributes="0"/>
-                                                      <Component id="impurityLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                      <Component id="binsLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                      <Component id="depthLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                      <Component id="outputfileLabel1" alignment="0" max="32767" attributes="0"/>
-                                                  </Group>
-                                                  <Group type="103" groupAlignment="0" attributes="0">
-                                                      <Group type="102" attributes="0">
-                                                          <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
-                                                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                                              <Component id="maxDepthTextField" alignment="0" pref="200" max="32767" attributes="0"/>
-                                                              <Component id="numClassesTextField" alignment="0" pref="200" max="32767" attributes="0"/>
-                                                              <Component id="impurityComboBox" alignment="0" max="32767" attributes="0"/>
-                                                          </Group>
+                                          <Group type="102" attributes="0">
+                                              <Group type="103" groupAlignment="1" attributes="0">
+                                                  <Component id="generateDecisionTreeButton" min="-2" max="-2" attributes="0"/>
+                                                  <Group type="102" attributes="0">
+                                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                                          <Component id="classesLabel" alignment="0" max="32767" attributes="0"/>
+                                                          <Component id="impurityLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                          <Component id="binsLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                          <Component id="depthLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                          <Component id="outputfileLabel1" alignment="0" max="32767" attributes="0"/>
                                                       </Group>
-                                                      <Group type="102" alignment="1" attributes="0">
-                                                          <EmptySpace max="-2" attributes="0"/>
-                                                          <Group type="103" groupAlignment="0" attributes="0">
-                                                              <Component id="decisionTreeOutputFileText" alignment="1" min="-2" pref="200" max="-2" attributes="0"/>
-                                                              <Component id="maxBinsTextField" alignment="1" min="-2" pref="200" max="-2" attributes="0"/>
+                                                      <Group type="103" groupAlignment="0" attributes="0">
+                                                          <Group type="102" attributes="0">
+                                                              <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
+                                                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                                                  <Component id="maxDepthTextField" alignment="0" pref="200" max="32767" attributes="0"/>
+                                                                  <Component id="numClassesTextField" alignment="0" pref="200" max="32767" attributes="0"/>
+                                                                  <Component id="impurityComboBox" alignment="0" max="32767" attributes="0"/>
+                                                              </Group>
+                                                          </Group>
+                                                          <Group type="102" alignment="1" attributes="0">
+                                                              <EmptySpace max="-2" attributes="0"/>
+                                                              <Group type="103" groupAlignment="0" attributes="0">
+                                                                  <Component id="decisionTreeOutputFileText" alignment="1" min="-2" pref="200" max="-2" attributes="0"/>
+                                                                  <Component id="maxBinsTextField" alignment="1" min="-2" pref="200" max="-2" attributes="0"/>
+                                                              </Group>
                                                           </Group>
                                                       </Group>
                                                   </Group>
                                               </Group>
+                                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                                              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                                           </Group>
                                           <Component id="decisionLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                                           <Component id="configLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                                       </Group>
-                                      <EmptySpace pref="391" max="32767" attributes="0"/>
+                                      <EmptySpace pref="104" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                             </DimensionLayout>
@@ -513,6 +517,7 @@
                                       <Group type="103" groupAlignment="3" attributes="0">
                                           <Component id="numClassesTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                                           <Component id="classesLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                                          <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="3" attributes="0">
@@ -608,6 +613,11 @@
                               <AuxValues>
                                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
                               </AuxValues>
+                            </Component>
+                            <Component class="javax.swing.JLabel" name="jLabel1">
+                              <Properties>
+                                <Property name="text" type="java.lang.String" value="* Classes must be labeled from 1 to Number of Classes."/>
+                              </Properties>
                             </Component>
                           </SubComponents>
                         </Container>
